tests/fixtures/invalid/abs_str.py
# Cannot call abs() with Str
x = abs("hello")
